# adrian_minune

./: Makefile  Makefile.am  Makefile.in  basic_alsa  basic_alsa.c  basic_alsa2  basic_alsa2.c  config.status  configure  configure.ac  fine_tune_whisper.ipynb  hello_world  hello_world.c
.deps/: basic_alsa2.Po
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
